# evident

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ROADMAP.md  temp_branch_never.evd  temp_generic_affine.evd  temp_test.evd
.github/workflows/: ci.yml
bootstrap/compiler/: evident.pkg
bootstrap/compiler/src/: diagnostics.evd  discovery.evd  environment.evd  host.evd  layout.evd  lexing.evd  main.evd  manifest.evd  parsing.evd  pipeline.evd  release.evd  semantics.evd  source.evd
build-x64/: .ninja_deps  .ninja_log  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compare_valid_direct_fail.ll  compare_valid_state_match.ll  compare_valid_yield_match.ll  compile_commands.json  hygiene_valid_permit_proof_signature.ll  hygiene_valid_try.ll  native_main_constant.s
cmake/: AssertCTestTotal.cmake  AssertCiWorkflow.cmake  AssertClangTidyBareBooleans.cmake  AssertCppDesignEscapeHatches.cmake  AssertInvalidCorpusRegistered.cmake  AssertPackageChecksum.cmake  AssertPackageZipListing.cmake  AssertPeExecutableFile.cmake  AssertReleaseDocs.cmake  AssertReleaseEvidence.cmake  AssertReleaseSourceTree.cmake  AssertTestCorpusRegistered.cmake  GenerateBootstrapCompilerEnvironment.cmake  RunAndCompareOutput.cmake  RunCTestTotalRejectsStaleCount.cmake  RunCiWorkflowAndAssert.cmake  RunClangTidyBareBooleansAndAssert.cmake  RunCliCheckToolchain.cmake  RunCliCheckToolchainMissingLinker.cmake  RunCliFailureAndCompare.cmake  RunCliRejectsInvalidUtf8Source.cmake  RunCliRejectsNulSource.cmake  RunCliSuccessAndCompare.cmake  RunCppDesignEscapeHatchesAndAssert.cmake  RunEmitAndAssertCoffObject.cmake  RunEmitAndAssertExists.cmake  RunEmitAndAssertPattern.cmake  RunEmitAndAssertPeExecutable.cmake  RunEmitAndCheckExit.cmake  RunEmitAndCompareFile.cmake  RunFailureAndCompareDiagnostics.cmake  RunInstallAndAssertLayout.cmake  RunInstallRejectsUnexpectedEntry.cmake  RunPackageAndAssertZip.cmake  RunPackageChecksumAndAssert.cmake  RunPackageChecksumRejectsTamperedPackage.cmake  RunPackageZipRejectsMissingExpectedEntry.cmake  RunPackageZipRejectsUnexpectedDirectory.cmake  RunPackageZipRejectsUnexpectedFile.cmake  RunPackageZipRejectsUnsafeEntries.cmake  (+6 more)
docs/: BOOTSTRAP_PLAN.md  COMPILER_FINISH_PLAN.md  CPP_DESIGN.md  DEEP_REASONING_OUTPUT.md  EVIDENT_LANGUAGE_SPEC.md  EVIDENT_NORTH_STAR.md  FINISH_EVIDENT_DESIGN.md  NATIVE_BACKEND_PLAN.md  RELEASE_CHECKLIST.md  RUST_DESIGN.md  SELF_EVIDENT_CLI.md  TOOLCHAIN_REPRODUCIBILITY.md
examples/: feature_mode.evd
include/evident/: Ast.hpp  Backend.hpp  Diagnostic.hpp  Driver.hpp  Hir.hpp  Lexer.hpp  Mir.hpp  Parser.hpp  ResolvedType.hpp  Semantic.hpp  Source.hpp  Token.hpp
src/: Ast.cpp  Backend.cpp  Diagnostic.cpp  Driver.cpp  Hir.cpp  Lexer.cpp  Mir.cpp  Parser.cpp  ResolvedType.cpp  Semantic.cpp  Source.cpp  Token.cpp  bootstrap_runtime.cpp  main.cpp
tests/: bootstrap_environment_probe.evd  bootstrap_host_runtime_probe.evd  expected_backend_compiler_owned_collection_operation.diag.out  expected_backend_main_params.diag.out  expected_backend_main_wrong_return.diag.out  expected_backend_main_yields.diag.out  expected_backend_materialized_never.diag.out  expected_backend_missing_main.diag.out  expected_backend_private_main.diag.out  expected_backend_unsupported_builtin_map.diag.out  expected_backend_unsupported_target.diag.out  expected_bootstrap_compiler.hir.out  expected_bootstrap_compiler.mir.out  expected_cli_check_toolchain_unsupported_target.stderr.out  expected_cli_check_toolchain_whitespace_clang_override.stderr.out  expected_cli_check_toolchain_with_input.stderr.out  expected_cli_duplicate_emit_stub.stderr.out  expected_cli_duplicate_package.stderr.out  expected_cli_duplicate_target.stderr.out  expected_cli_emit_exe_missing_argument.stderr.out  expected_cli_emit_stub_native_conflict.stderr.out  expected_cli_help.stdout.out  expected_cli_missing_input_file.stderr.out  expected_cli_multiple_native_emit_modes.stderr.out  expected_cli_no_input.stderr.out  expected_cli_package_cannot_mix_inputs.stderr.out  expected_cli_package_empty_directory.stderr.out  expected_cli_package_manifest_absolute_path.stderr.out  expected_cli_package_manifest_bad_path.stderr.out  expected_cli_package_manifest_duplicate.stderr.out  expected_cli_package_manifest_empty.stderr.out  expected_cli_package_manifest_missing_source.stderr.out  expected_cli_package_manifest_wrong_extension.stderr.out  expected_cli_package_missing_argument.stderr.out  expected_cli_package_missing_directory.stderr.out  expected_cli_package_path_is_file.stderr.out  expected_cli_print_toolchain.stdout.out  expected_cli_print_toolchain_whitespace_clang_override.stderr.out  expected_cli_print_toolchain_with_input.stderr.out  expected_cli_target_missing_argument.stderr.out  (+483 more)
tests/package_dir/: 00_support.evd
tests/package_dir/nested/: 10_consumer.evd  20_main.evd
tests/package_empty/: README.md
tests/package_manifest/: evident.pkg  m_main.evd  z_support.evd
tests/package_manifest/nested/: a_consumer.evd
tests/package_manifest_absolute_path/: evident.pkg
tests/package_manifest_bad_path/: evident.pkg
tests/package_manifest_duplicate/: evident.pkg  source.evd
tests/package_manifest_empty/: evident.pkg
tests/package_manifest_missing_source/: evident.pkg
